--- a/jenkinsfile
+++ b/jenkinsfile
@@ -179,7 +179,7 @@ pipeline {
 						if (env.NEXUS_IP != 'null') {
 	    			                   sh 'zip -r web-test-report-${BUILD_NUMBER}.zip . -i webtest/src/test/java/com/shoppingcart/Reports/*'
 	    			                   sh 'zip -r mobile-test-report-${BUILD_NUMBER}.zip . -i mobiletest/src/test/java/com/shoppingcart/Reports/*'
-				                   sh 'zip -r jmeterreport-${BUILD_NUMBER}.zip jmeter-code/OnlineShop_${BUILD_NUMBER}.html/*'
+				                   sh 'zip -r jmeterreport-${BUILD_NUMBER}.zip . -i jmeter-code/OnlineShop_${BUILD_NUMBER}.html/*'
 				
 				                  sh 'mkdir test-reports'
 				
