--- a/jenkinsfile
+++ b/jenkinsfile
@@ -115,6 +115,23 @@ pipeline {
 					}
 			}
 	}
+	        stage('Performance') {
+            			steps {
+		   			script {
+						try {
+							bat '''dir
+                            git clone https://github.com/harishpallapu/folder.git
+                            cd folder
+                            jmeter.bat -n -t C:/Windows/system32/config\\systemprofile/AppData/Local/Jenkins/.jenkins/workspace/folder/OnlineShop_1.jmx -l C:/Windows/system32/config/systemprofile/AppData/Local/Jenkins/.jenkins/workspace/folder/OnlineShop_result.jtl -e -o C:/Windows/system32/config/systemprofile/AppData/Local/Jenkins/.jenkins/workspace/folder/OnlineShop_1.html
+            					 '''
+            					} catch (err) {
+							echo err.getMessage()
+							unstable(message: "${STAGE_NAME} is unstable")
+							echo "Error detected, ${env.STAGE_NAME} failed..................!"
+							}
+					}
+			}
+		} 
         stage('Nexus') {
             steps {
                 powershell 'mkdir test-reports'
