--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,19 +8,27 @@ pipeline {
         }
         stage('source code checkout') {
             steps {
+	                    if (env.SAST_GIT_URL != 'null') {    
                	 			git "${env.SAST_GIT_URL}"
+                    } else {
+                        echo "skipping the stage ${env.STAGE_NAME}.............................!"					
+					}
             }
         }
         stage('SAST analysis') {
             steps {
 			      script {
 						try {
+						if (env.SAST_GIT_URL != 'null') {						
                 bat "git clone https://github.com/harishpallapu/sonarqube_scannar_windows.git"
                 bat "./sonarqube_scannar_windows/sonar-scanner-4.6.2.2472-windows/bin/sonar-scanner.bat"
+	                    } else {
+                        echo "skipping the stage ${env.STAGE_NAME}.............................!"	
 						} catch (err) {
 							echo err.getMessage()
 							unstable(message: "${STAGE_NAME} is unstable")
 							echo "Error detected, ${env.STAGE_NAME} failed..................!"
+							}
 						}   
 					}
 			}
@@ -47,11 +55,15 @@ pipeline {
             steps {
 				script {
 						try {
+						if (env.SAST_GIT_URL != 'null') {						
 							bat 'mvn clean package'
+					        } else {
+                                                        echo 'skipping the stage ${env.STAGE_NAME}.............................!'							
 						} catch (err) {
 							echo err.getMessage()
 							unstable(message: "${STAGE_NAME} is unstable")
 							echo "Error detected, ${env.STAGE_NAME} failed..................!"
+							}
 						}
 				}							
             }
@@ -60,11 +72,15 @@ pipeline {
             			steps {
 					script {
 						try {
-            deploy adapters: [tomcat8(credentialsId: 'f9e5d28d-6a35-4704-a1bd-6676011dd79a', path: '', url: '${env.TOMCAT_IP}')], contextPath: null, onFailure: false, war: '**/*.war'		
+						if (env.TOMCAT_IP != 'null') {						
+            deploy adapters: [tomcat8(credentialsId: 'f9e5d28d-6a35-4704-a1bd-6676011dd79a', path: '', url: '${env.TOMCAT_IP}')], contextPath: null, onFailure: false, war: '**/*.war'
+						} else {
+                                                        echo "skipping the stage ${env.STAGE_NAME}.............................!"	    
 						} catch (err) {
 							echo err.getMessage()
 							unstable(message: "${STAGE_NAME} is unstable")
 							echo "Error detected, ${env.STAGE_NAME} failed..................!"
+							}
 						}		
 					}
 				}
@@ -73,13 +89,17 @@ pipeline {
            			steps {
 		   			script {
 						try {
+						if (env.FUNCTIONAL_WEB_GIT_URL != 'null') {						
 							bat """git clone ${env.FUNCTIONAL_WEB_GIT_URL}
 							cd webtest
 							mvn test """
+					        } else {
+                                                        echo "skipping the stage ${env.STAGE_NAME}.............................!"							
 						} catch (err) {
 							echo err.getMessage()
 							unstable(message: "${STAGE_NAME} is unstable")
 							echo "Error detected, ${env.STAGE_NAME} failed..................!"
+							}
 						}					
 					}
 	 		}
@@ -88,13 +108,17 @@ pipeline {
             				steps {
 		   			script {
 						try {
+						if (env.FUNCTIONAL_MOBILE_GIT_URL != 'null') {						
 							bat """ git clone ${env.FUNCTIONAL_MOBILE_GIT_URL}
 							cd mobiletest
 							mvn test """
+					        } else {
+                                                        echo "skipping the stage ${env.STAGE_NAME}.............................!"							
 						} catch (err) {
 							echo err.getMessage()
 							unstable(message: "${STAGE_NAME} is unstable")
 							echo "Error detected, ${env.STAGE_NAME} failed..................!"
+							}
 							}
 					}
 				}
@@ -119,16 +143,20 @@ pipeline {
             			steps {
 		   			script {
 						try {
+						if (env.JMETER_GIT_URL != 'null') {						
 							bat """
                             git clone ${env.JMETER_GIT_URL}
 			    dir
                             cd folder
-                            jmeter.bat -n -t C:/Windows/system32/config\\systemprofile/AppData/Local/Jenkins/.jenkins/workspace/folder/OnlineShop_1.jmx -l C:/Windows/system32/config/systemprofile/AppData/Local/Jenkins/.jenkins/workspace/folder/OnlineShop_result.jtl -e -o C:/Windows/system32/config/systemprofile/AppData/Local/Jenkins/.jenkins/workspace/folder/OnlineShop_1.html
+                            jmeter.bat -n -t C:/Windows/system32/config\\systemprofile/AppData/Local/Jenkins/.jenkins/workspace/folder/OnlineShop_1.jmx -l C:/Windows/system32/config/systemprofile/AppData/Local/Jenkins/.jenkins/workspace/folder/OnlineShop_result.jtl -e -o C:/Windows/system32/config/systemprofile/AppData/Local/Jenkins/.jenkins/workspace/folder/OnlineShop_1.html			
             					 """
+					        } else {
+                                                        echo "skipping the stage ${env.STAGE_NAME}.............................!"						 
             					} catch (err) {
 							echo err.getMessage()
 							unstable(message: "${STAGE_NAME} is unstable")
 							echo "Error detected, ${env.STAGE_NAME} failed..................!"
+							}
 							}
 					}
 			}
