--- a/jenkinsfile
+++ b/jenkinsfile
@@ -61,8 +61,11 @@ pipeline {
             steps {
 				script {
 						try {
-						if (env.SAST_GIT_URL != 'null') {
-							sh 'mvn clean package'
+						if (env.BUILD_GIT_URL != 'null') {
+							sh "git clone ${env.BUILD_GIT_URL} build-code"
+							sh '''
+							cd build-code
+							mvn clean package'''
 					        } else {
                                                         echo 'skipping the stage ${env.STAGE_NAME}.............................!'
                                                         }
